--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next-pwa": "^3.1.5",
     "react": "16.14.0",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
