--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,8 @@
     [
       "babel-plugin-styled-components",
       {
-          "ssr": true,
-          "displayName": true
+        "ssr": true,
+        "displayName": true
       }
     ]
   ],
@@ -15,7 +15,8 @@
         [
           "babel-plugin-styled-components",
           {
-            "ssr": false
+            "ssr": false,
+            "displayName": false
           }
         ]
       ]
