--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "next": "9.5.5",
     "next-pwa": "^3.1.5",
+    "polished": "^4.0.3",
     "react": "16.14.0",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.0",
