--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "polished": "^4.0.3",
     "react": "16.14.0",
     "react-dom": "16.13.1",
+    "react-slick": "^0.27.13",
     "styled-components": "^5.2.0",
     "styled-media-query": "^2.1.2"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
