--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/react": "^6.0.26",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
