--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*": [
+    "/src/**/*": [
       "yarn lint --fix",
       "yarn test --findRelatedTests --bail"
     ]
