--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/boxicons-regular": "^10.23.0",
     "@styled-icons/boxicons-solid": "^10.18.0",
     "@styled-icons/fa-brands": "^10.22.0",
     "@styled-icons/material-outlined": "^10.18.0",
