--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/react": "^6.0.26",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
