--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.xor": "^4.5.0",
     "next": "10.0.9",
     "next-pwa": "^3.1.5",
+    "nextjs-progressbar": "^0.0.9",
     "polished": "^4.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
