--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql": "^15.5.0",
     "lodash.xor": "^4.5.0",
     "next": "10.0.9",
+    "next-auth": "^3.11.2",
     "next-pwa": "^3.1.5",
     "nextjs-progressbar": "^0.0.9",
     "polished": "^4.0.3",
@@ -59,6 +60,7 @@
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@types/next-auth": "3.7.0",
     "@types/react": "^17.0.3",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.4",
