--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "@types/lodash.xor": "^4.5.6",
     "graphql": "^15.5.0",
+    "joi": "^17.4.0",
     "lodash.xor": "^4.5.0",
     "next": "10.0.9",
     "next-auth": "^3.11.2",
@@ -59,8 +60,8 @@
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
     "@types/next-auth": "3.7.0",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.4",
