--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.4.2",
+    "msw": "^0.29.0",
     "plop": "^2.7.4",
     "prettier": "^2.2.1",
     "react-is": "^16.13.1",
