--- a/package.json
+++ b/package.json
@@ -30,63 +30,59 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.3.11",
-    "@stripe/react-stripe-js": "^1.4.1",
-    "@stripe/stripe-js": "^1.16.0",
-    "@styled-icons/boxicons-regular": "^10.23.0",
-    "@styled-icons/boxicons-solid": "^10.18.0",
-    "@styled-icons/fa-brands": "^10.22.0",
-    "@styled-icons/material-outlined": "^10.18.0",
+    "@apollo/client": "^3.4.16",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.20.3",
+    "@styled-icons/boxicons-regular": "^10.38.0",
+    "@styled-icons/boxicons-solid": "^10.38.0",
+    "@styled-icons/fa-brands": "^10.38.0",
+    "@styled-icons/material-outlined": "^10.34.0",
     "@styled-icons/remix-fill": "^10.18.0",
     "@types/lodash.xor": "^4.5.6",
     "dotenv": "^10.0.0",
-    "graphql": "^15.5.0",
-    "joi": "^17.4.0",
+    "joi": "^17.4.2",
     "lodash.xor": "^4.5.0",
-    "next": "10.0.9",
-    "next-auth": "^3.11.2",
-    "next-pwa": "^3.1.5",
-    "nextjs-progressbar": "^0.0.9",
-    "polished": "^4.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-slick": "^0.27.13",
-    "styled-components": "^5.2.0",
+    "next": "^12.0.1",
+    "next-auth": "^3.29.0",
+    "next-pwa": "^5.4.0",
+    "nextjs-progressbar": "^0.0.13",
+    "polished": "^4.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
+    "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/react": "^6.0.26",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/react-hooks": "^5.1.1",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.22",
-    "@types/next-auth": "3.7.0",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-slick": "^0.23.4",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "apollo": "^2.32.5",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "jest-styled-components": "^7.0.3",
-    "lint-staged": "^10.4.2",
-    "msw": "^0.29.0",
-    "node-fetch": "^2.6.1",
-    "plop": "^2.7.4",
-    "prettier": "^2.2.1",
-    "react-is": "^16.13.1",
-    "typescript": "^4.0.3"
+    "@babel/core": "^7.16.0",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-slick": "^0.23.7",
+    "@types/styled-components": "^5.1.15",
+    "apollo": "^2.33.7",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "jest-styled-components": "^7.0.5",
+    "lint-staged": "^11.2.6",
+    "msw": "^0.35.0",
+    "node-fetch": "2.6.1",
+    "plop": "^2.7.6",
+    "prettier": "^2.4.1",
+    "react-is": "^17.0.2",
+    "typescript": "^4.4.4"
   }
 }
