--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "^12.0.1",
     "next-auth": "^3.29.0",
     "next-pwa": "^5.4.0",
+    "next-seo": "^4.28.1",
     "nextjs-progressbar": "^0.0.13",
     "polished": "^4.1.3",
     "react": "^17.0.2",
