--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^9.1.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
