--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/core": "^7.16.0",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
