--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "yarn test --watch",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev 3000 cy:run",
     "schema:download": "apollo client:download-schema --endpoint=http://localhost:1337/graphql schema-temp.gql",
     "schema:convert": "node convertToNonNull.js",
     "codegen": "apollo codegen:generate --target typescript --excludes=node_modules/ --includes=src/graphql/**/*.ts --localSchemaFile schema.gql --tagName=gql --outputFlat src/graphql/generated",
@@ -88,6 +89,7 @@
     "plop": "^2.7.6",
     "prettier": "^2.4.1",
     "react-is": "^17.0.2",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.4.4"
   }
 }
