--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@jackfranklin/test-data-bot": "^1.4.0",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@testing-library/cypress": "^8.0.2",
