--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^9.1.1",
+    "cypress-plugin-stripe-elements": "^1.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
